--- a/API-recap-with-Phone-Hunter(module34)/index.html
+++ b/API-recap-with-Phone-Hunter(module34)/index.html
@@ -21,12 +21,18 @@
             <input id="search-field" type="text" placeholder="search..." class="input input-bordered w-full max-w-xs" />
             <button onclick="handleSearchButton()" class="btn btn-accent">search</button>
 
+            <!-- another search field -->
+            <input type="text" id="search-field2" placeholder="search here" class="input input-bordered w-full max-w-xs" />
+            <button onclick="handleSearch2()" class="btn btn-primary">search</button>
         </section>
 
         <!-- search result -->
       <section>
         <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-          
+        </div>
+        <!-- show all button -->
+        <div id="show-all-container" class="hidden">
+        <button class="btn btn-accent">show all</button>
         </div>
       </section>
     </main>
