--- a/API-recap-with-Phone-Hunter(module34)/index.html
+++ b/API-recap-with-Phone-Hunter(module34)/index.html
@@ -26,8 +26,13 @@
             <button onclick="handleSearch2()" class="btn btn-primary">search</button>
         </section>
 
+        
         <!-- search result -->
-      <section>
+        <section>
+          <!-- spinner or loader -->
+          <div id="loading-spinner" class="text-center my-40 hidden">
+        <span class="loading loading-spinner loading-lg"></span>
+          </div>
         <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         </div>
         <!-- show all button -->
